# django-compose

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
requirements/: development.txt  production.txt
src/app/: views.py
src/project/: settings.py  urls.py
src/theme/static_src/: package-lock.json
src/theme/templates/: base.html
