[tool.poetry]
name = "django-compose"
version = "0.1.0"
description = ""
authors = ["Victor <victor.movileanu@check24.de>"]
readme = "README.md"
packages = [{include = "django_compose"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.3"
mysqlclient = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
