[tool.poetry]
name = "django-compose"
version = "0.1.0"
description = ""
authors = ["Victor <victor.movileanu@check24.de>"]
readme = "README.md"
packages = [{include = "django_compose"}]

[tool.poetry.dependencies]
python = ">=3.8,<4"
Django = "^4.1.3"
mysqlclient = "^2.1.1"
bpython = "^0.23"
django-extensions = "^3.2.1"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
