[tool.poetry]
name = "llm-sandbox"
version = "0.1.0"
description = ""
authors = ["Victor <victor@minimalistdjango.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
psycopg = {version = "^3.1.12", extras = ["binary"]}
django-tailwind = "^3.6.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
django-tailwind = {version = "^3.6.0", extras = ["reload"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
